--- a/style.css
+++ b/style.css
@@ -101,7 +101,9 @@ body {
   margin-top: 10px;
 }
 .course-card {
-  width: 400px;
+  flex-grow: 1;
+  flex-basis: 20%;
+  margin: 5px;
 }
 .course-card img {
   width: 100%;
@@ -149,4 +151,16 @@ body {
 }
 .Footer__one p{
     margin: 10px;
+}
+/* media queries */
+@media screen and (max-width:800px){
+  body{
+    font-size: 10px;
+  }
+  
+}
+@media screen and (max-width:600px){
+  .course-card{
+    flex-basis: 40%;
+  }
 }
